<resources>
    <string name="app_name">Kalkulator_new</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="multiply">X</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="equals1">/</string>
    <string name="stepen">^</string>
    <string name="koren">√</string>
    <string name="sinus">sin</string>
    <string name="cosinus">cos</string>
    <string name="history">История</string>
    <string name="page">Сложные функции</string>
    <string name="page1">Базовые функции</string>
</resources>